feat(culling): implements advanced culling manager and leaf culling functionality
sync 1.21

- Add the AABBCullingManager class for frustum culling of entities and block entities - Implement BlockFaceOcclusionCuller for block face culling based on ray tracing
- Introduced BlockEntityVisibility and EntityVisibility interfaces to support custom elimination logic
- Added LeafCulling utility class to handle leaf connectivity and internal leaf hiding
- Integrate the culling logic of entities and block entities in Mixin
- Updated config file to support new culling options
- Optimize namespace caching for resource bundles to improve resource loading performance - Add necessary dependency library references (joml, caffeine, occlusionculling)